gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: quay.io/openshiftdemos/rollouts-demo:blue
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
  strategy:
    type: Recreate
